--- a/Proy/electron_react/package.json
+++ b/Proy/electron_react/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "medilock",
+  "name": "electron_react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "electron": "^2.0.0",
     "material-ui": "^0.20.1",
     "npm": "^6.0.1",
     "react": "^16.3.2",
@@ -12,17 +11,13 @@
     "react-scripts": "1.1.4",
     "react-tap-event-plugin": "^3.0.2"
   },
-  "main": "src/electron-starter.js",
-  "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "electron": "electron .",
-    "dev": "nf start"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "foreman": "^2.0.0"
+    "electron": "^2.0.1"
   }
 }
