--- a/Proy/electron_react/package.json
+++ b/Proy/electron_react/package.json
@@ -9,7 +9,8 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
-    "react-tap-event-plugin": "^3.0.2"
+    "react-tap-event-plugin": "^3.0.2",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
