--- a/medilock/frontend/package.json
+++ b/medilock/frontend/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "electron": "^2.0.0",
     "material-ui": "^0.20.1",
+    "nexmo": "^2.2.1",
     "npm": "^6.0.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
