--- a/medilock/frontend/package.json
+++ b/medilock/frontend/package.json
@@ -12,7 +12,8 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
-    "react-tap-event-plugin": "^3.0.2"
+    "react-tap-event-plugin": "^3.0.2",
+    "react-validation": "^3.0.7"
   },
   "main": "src/electron-starter.js",
   "homepage": "./",
